--- a/Flask-Forms-Lab/templates/home.html
+++ b/Flask-Forms-Lab/templates/home.html
@@ -10,18 +10,13 @@
 <h2>Facebook Search Bar</h2>
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
+    <ul id="myUL">
+    {%for i in new_friends%}
 
-<ul id="myUL">
-  <li><a href="#">Adele</a></li>
-  <li><a href="#">Agnes</a></li>
-  <li><a href="#">Billy</a></li>
-  <li><a href="#">Bob</a></li>
-  <li><a href="#">Calvin</a></li>
-  <li><a href="#">Christina</a></li>
-  <li><a href="#">Cindy</a></li>
-  <li><a href="#">Loai</a></li>
-</ul>
+    <li><a href="#">{{i}}</a></li>
+    {%endfor%}
 
+    </ul>
 <script>
 function myFunction() {
     var input, filter, ul, li, a, i, txtValue;
@@ -40,7 +35,6 @@ function myFunction() {
     }
 }
 </script>
-
 </body>
 </html>
 
