--- a/Flask-Forms-Lab/templates/home.html
+++ b/Flask-Forms-Lab/templates/home.html
@@ -13,7 +13,7 @@
     <ul id="myUL">
     {%for i in new_friends%}
 
-    <li><a href="#">{{i}}</a></li>
+    <li><a href="/friend_exists/<string:friend>">{{i}}</a></li>
     {%endfor%}
 
     </ul>
