--- a/Flask-Forms-Lab/templates/friend_exists.html
+++ b/Flask-Forms-Lab/templates/friend_exists.html
@@ -9,7 +9,11 @@
 
 </head>
 <body>
-
+{%if friend_name in True%}
+<p style="color:purple;">yeahhh {{friend}} is your friend!</p>
+{%else%}
+<p style="color:blue;">nah {{friend}} is not your friend</p>
+{%endif%}
 
 
 </body>
